--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "ejs": "*",
     "express": "3.21.2",
-    "nconf": "^0.8.4"
+    "nconf": "^0.8.4",
+    "winston": "^2.3.1"
   }
 }
