--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/NadezhdaWebDeveloper/chat#readme",
   "dependencies": {
     "ejs": "*",
+    "ejs-locals": "^1.0.2",
     "express": "3.21.2",
     "nconf": "^0.8.4",
     "winston": "^2.3.1"
