--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,13 @@
 {
-  "port" : 3000
+  "port" : 3000,
+  "mongoose": {
+    "uri": "mongodb://nadezhda:qwerty@ds161931.mlab.com:61931/chat",
+    "options": {
+      "server": {
+        "socketOptions": {
+          "keepAlive": 1
+        }
+      }
+    }
+  }
 }
