--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/NadezhdaWebDeveloper/chat#readme",
   "dependencies": {
+    "async": "^2.4.1",
     "ejs": "*",
     "ejs-locals": "^1.0.2",
     "express": "3.21.2",
+    "mongoose": "^4.10.4",
     "nconf": "^0.8.4",
     "winston": "^2.3.1"
   }
