--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/NadezhdaWebDeveloper/chat#readme",
   "dependencies": {
     "async": "^2.4.1",
+    "connect-mongo": "^1.3.2",
     "ejs": "*",
     "ejs-locals": "^1.0.2",
     "express": "3.21.2",
