--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "3.21.2",
     "mongoose": "^4.10.4",
     "nconf": "^0.8.4",
+    "socket.io": "^2.0.2",
     "winston": "^2.3.1"
   }
 }
