--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "nconf": "^0.8.4",
     "socket.io": "^2.0.2",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
